--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
         if: failure()
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp.gmail.com
+          server_address: smtp-mail.outlook.com
           server_port: 587
           username: ${{secrets.EMAIL_ORIGEM}}
           password: ${{secrets.SENHA_EMAIL}}
