--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,9 @@ jobs:
         if: failure()
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp-mail.outlook.com
+          server_address: smtp.office365.com
           server_port: 587
+          secure: true
           username: ${{secrets.EMAIL_ORIGEM}}
           password: ${{secrets.SENHA_EMAIL}}
           subject: Falha no workflow do GitHub Actions
