--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,7 @@ jobs:
         with:
           server_address: smtp.office365.com
           server_port: 587
-          secure: true
+          secure: false
           username: ${{secrets.EMAIL_ORIGEM}}
           password: ${{secrets.SENHA_EMAIL}}
           subject: Falha no workflow do GitHub Actions
