--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,12 +91,10 @@ jobs:
         if: failure()
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp.office365.com  # ✅ Usar Office365, não Outlook
-          server_port: 587                   # ✅ Porta 587 (TLS) ou 465 (SSL)
-          secure: false                      # ✅ false para porta 587
-          require_tls: true                  # ✅ Obrigatório para Office365
-          username: ${{ secrets.EMAIL_ORIGEM }}  # Ex: user@domain.com
-          password: ${{ secrets.SENHA_EMAIL }}   # Senha de APP, não senha normal
+          server_address: smtp-relay.brevo.com
+          server_port: 587                            
+          username: ${{ secrets.EMAIL_ORIGEM }} 
+          password: ${{ secrets.SENHA_EMAIL }}  
           subject: "🚨 Falha no GitHub Actions: ${{ github.workflow }}"
           body: "O workflow falhou. Verifique em: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           to: ${{ secrets.EMAIL_DESTINO }}   # E-mail destino
