--- a/backend/env.example
+++ b/backend/env.example
@@ -2,12 +2,13 @@
 PORT=3000
 NODE_ENV=development
 
-# Configurações do Banco de Dados
+# Configurações do Banco de Dados PostgreSQL
 DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
+DB_PORT=5432
+DB_USER=postgres
 DB_PASSWORD=password
 DB_NAME=tarefas_db
+DB_SSL=false
 
 # Configurações do BetterStack
 BETTERSTACK_SOURCE_TOKEN=your_betterstack_source_token_here
