--- a/backend/package.json
+++ b/backend/package.json
@@ -9,21 +9,29 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@logtail/node": "^0.5.5",
+    "@logtail/winston": "^0.5.5",
     "cors": "^2.8.5",
-    "swagger-ui-express": "^5.0.0",
-    "swagger-jsdoc": "^6.2.8",
-    "mysql2": "^3.6.5",
     "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
-    "winston-betterstack": "^1.0.0",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["api", "express", "tarefas", "rest", "swagger", "mysql"],
+  "keywords": [
+    "api",
+    "express",
+    "tarefas",
+    "rest",
+    "swagger",
+    "postgresql"
+  ],
   "author": "Seu Nome",
   "license": "MIT"
-} 
+}
