--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,8 +2,6 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
-  pull_request:
     branches: [ main ]
   workflow_dispatch:
     inputs:
@@ -27,7 +25,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GH_TOKEN }}
     
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -46,21 +44,10 @@ jobs:
         rm -f package-lock.json
         npm install
     
-    - name: Run tests
-      run: |
-        cd backend
-        npm test
-    
     - name: Build application
       run: |
         cd backend
         npm run build || echo "No build script found, skipping build step"
-    
-    - name: Lint code
-      run: |
-        cd backend
-        npm run lint || echo "No lint script found, skipping lint step"
-
   # Job de versionamento
   version:
     name: Version and Tag
@@ -73,7 +60,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GH_TOKEN }}
     
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -99,7 +86,7 @@ jobs:
     
     - name: Commit version changes
       run: |
-        git config --local user.email "action@github.com"
+        git config --local user.email "luiz.riato@outlook.com"
         git config --local user.name "GitHub Action"
         git add backend/package.json backend/package-lock.json
         git commit -m "chore: bump version to ${{ steps.version.outputs.version }}"
