--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: luizrinaldiriato/cicd
 
 jobs:
   # Job de CI (Continuous Integration)
@@ -25,7 +25,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -103,6 +103,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
+    - name: Debug Docker Hub credentials
+      run: |
+        echo "🔍 Debug Docker Hub credentials..."
+        echo "Username: ${{ secrets.DOCKER_USERNAME }}"
+        echo "Password length: ${#DOCKER_PASSWORD}"
+        echo "Repository: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
+        echo "GitHub repository: ${{ github.repository }}"
+        echo "Full image name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
+    
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     
@@ -111,6 +120,31 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        registry: ${{ env.REGISTRY }}
+    
+    - name: Test Docker Hub access
+      run: |
+        echo "🧪 Testing Docker Hub access..."
+        docker pull hello-world || echo "❌ Failed to pull hello-world"
+        docker images || echo "❌ Failed to list images"
+        
+        # Testar se conseguimos fazer login
+        echo "🔐 Testing login..."
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin || echo "❌ Login failed"
+    
+    - name: Create repository if not exists
+      run: |
+        echo "📦 Checking if repository exists..."
+        REPO_NAME="${{ env.IMAGE_NAME }}"
+        echo "Repository: $REPO_NAME"
+        
+        # Tentar criar o repositório (pode falhar se já existir, mas não é problema)
+        curl -X POST "https://hub.docker.com/v2/repositories/" \
+          -H "Authorization: JWT $(curl -s -H "Content-Type: application/json" \
+          -X POST https://hub.docker.com/v2/users/login/ \
+          -d '{"username":"${{ secrets.DOCKER_USERNAME }}","password":"${{ secrets.DOCKER_PASSWORD }}"}' | jq -r .token)" \
+          -H "Content-Type: application/json" \
+          -d "{\"namespace\":\"${{ secrets.DOCKER_USERNAME }}\",\"name\":\"${REPO_NAME#*/}\",\"is_private\":false}" || echo "Repository might already exist"
     
     - name: Extract metadata
       id: meta
