--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,10 +10,6 @@ on:
         required: false
         default: ''
 
-env:
-  REGISTRY: docker.io
-  IMAGE_NAME: luizrinaldiriato/cicd
-
 jobs:
   # Job de CI (Continuous Integration)
   ci:
@@ -48,151 +44,168 @@ jobs:
       run: |
         cd backend
         npm run build || echo "No build script found, skipping build step"
-  # Job de versionamento
-  version:
-    name: Version and Tag
-    runs-on: ubuntu-latest
-    needs: ci
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-    
-    - name: Generate version
-      id: version
-      run: |
-        if [ -n "${{ github.event.inputs.version }}" ]; then
-          VERSION="${{ github.event.inputs.version }}"
-        else
-          # Gerar versão baseada no timestamp
-          VERSION="1.0.$(date +%s)"
-        fi
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-        echo "Generated version: $VERSION"
-    
-    - name: Update package.json version
-      run: |
-        cd backend
-        npm version ${{ steps.version.outputs.version }} --no-git-tag-version
-    
-    - name: Commit version changes
-      run: |
-        git config --local user.email "luiz.riato@outlook.com"
-        git config --local user.name "GitHub Action"
-        git add backend/package.json backend/package-lock.json
-        git commit -m "chore: bump version to ${{ steps.version.outputs.version }}"
-        git push
 
-  # Job de build da imagem Docker
-  build:
-    name: Build Docker Image
+  # Job de build e deploy da imagem Docker
+  build_and_deploy:
+    if: startsWith(github.ref, 'refs/heads/main')
+    needs: ci
     runs-on: ubuntu-latest
-    needs: [ci, version]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
+    permissions:
+      contents: write
+      packages: write
+
+    outputs:
+      app_version: ${{ steps.version_step.outputs.NEW_VERSION }}
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: Debug Docker Hub credentials
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
+
+    - name: Fetch todas as tags
       run: |
-        echo "🔍 Debug Docker Hub credentials..."
-        echo "Username: ${{ secrets.DOCKER_USERNAME }}"
-        echo "Password length: ${#DOCKER_PASSWORD}"
-        echo "Repository: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
-        echo "GitHub repository: ${{ github.repository }}"
-        echo "Full image name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
-    
-    - name: Set up Docker Buildx
+        echo "Buscando todas as tags do repositório..."
+        git fetch --tags
+        echo "Tags existentes:"
+        git tag
+
+    - name: Executar Lógica de Versionamento
+      id: version_step
+      run: |
+        #!/bin/bash
+        set -e
+
+        echo "--- Iniciando processo de versionamento ---"
+        
+        # Buscar apenas tags de aplicação (prefixo 'v')
+        LAST_TAG=$(git tag --sort=-creatordate | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | head -n1 || echo "")
+        
+        echo "DEBUG: Valor inicial de LAST_TAG: '$LAST_TAG'"
+
+        if [ -z "$LAST_TAG" ]; then
+            echo "Nenhuma tag 'vX.Y.Z' encontrada. Iniciando com v0.0.0."
+            LAST_TAG="v0.0.0"
+        fi
+
+        echo "Última tag considerada: $LAST_TAG"
+
+        # Extrair componentes da versão
+        VERSION_WITHOUT_V=${LAST_TAG#v}
+        IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION_WITHOUT_V"
+        echo "DEBUG: Versão atual - Major: $MAJOR, Minor: $MINOR, Patch: $PATCH"
+
+        # Determinar incremento de versão
+        echo "Obtendo commits desde a última tag..."
+        COMMITS_SINCE_LAST_TAG=$(git log "$LAST_TAG..HEAD" --pretty=format:"%s")
+        echo "DEBUG: Commits desde '$LAST_TAG':"
+        echo "$COMMITS_SINCE_LAST_TAG"
+        echo "-----------------------------------"
+
+        INCREMENT="patch" # Padrão: incremento de patch
+        if [[ "$COMMITS_SINCE_LAST_TAG" == *"BREAKING CHANGE"* ]]; then
+            INCREMENT="major"
+        elif [[ "$COMMITS_SINCE_LAST_TAG" == *"feat"* ]]; then
+            INCREMENT="minor"
+        fi
+        echo "DEBUG: Tipo de incremento determinado: $INCREMENT"
+
+        # Incrementar versão
+        case $INCREMENT in
+            major)
+                MAJOR=$((MAJOR + 1))
+                MINOR=0
+                PATCH=0
+                ;;
+            minor)
+                MINOR=$((MINOR + 1))
+                PATCH=0
+                ;;
+            patch)
+                PATCH=$((PATCH + 1))
+                ;;
+        esac
+
+        NEW_VERSION="v${MAJOR}.${MINOR}.${PATCH}"
+        echo "Nova versão calculada: $NEW_VERSION"
+
+        # Verificar se a nova versão é a mesma da última tag
+        if [ "$NEW_VERSION" == "$LAST_TAG" ] && [ "$LAST_TAG" != "v0.0.0" ]; then
+          echo "A nova versão ($NEW_VERSION) é a mesma da última tag existente ($LAST_TAG). Não há necessidade de criar uma nova tag."
+          echo "NEW_VERSION=" >> $GITHUB_OUTPUT
+          exit 0
+        fi
+
+        # Criar arquivo de versão
+        echo "$NEW_VERSION" > VERSION.txt
+        git add VERSION.txt
+        echo "DEBUG: Adicionado VERSION.txt ao git"
+
+        # Configurar git
+        git config user.name "GitHub Action"
+        git config user.email "luiz.riato@outlook.com"
+        echo "DEBUG: Configuração do Git definida"
+
+        # Commit e tag
+        echo "DEBUG: Realizando commit com a nova versão..."
+        git commit -m "chore: release $NEW_VERSION [skip ci]"
+        echo "DEBUG: Criando tag '$NEW_VERSION'..."
+        git tag -a "$NEW_VERSION" -m "Release $NEW_VERSION"
+
+        # Push do commit e da tag
+        echo "DEBUG: Fazendo push para 'main'..."
+        git push origin main
+        echo "DEBUG: Fazendo push da tag '$NEW_VERSION'..."
+        git push origin "$NEW_VERSION"
+        echo "DEBUG: Push de commit e tag concluído."
+
+        # Output para os próximos steps
+        echo "NEW_VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
+        echo "--- Processo de versionamento concluído ---"
+
+    - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v3
-    
-    - name: Log in to Docker Hub
+
+    - name: Cache Docker layers
+      uses: actions/cache@v4
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
+    - name: Login no Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        registry: ${{ env.REGISTRY }}
-    
-    - name: Test Docker Hub access
-      run: |
-        echo "🧪 Testing Docker Hub access..."
-        docker pull hello-world || echo "❌ Failed to pull hello-world"
-        docker images || echo "❌ Failed to list images"
-        
-        # Testar se conseguimos fazer login
-        echo "🔐 Testing login..."
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin || echo "❌ Login failed"
-    
-    - name: Create repository if not exists
-      run: |
-        echo "📦 Checking if repository exists..."
-        REPO_NAME="${{ env.IMAGE_NAME }}"
-        echo "Repository: $REPO_NAME"
-        
-        # Tentar criar o repositório (pode falhar se já existir, mas não é problema)
-        curl -X POST "https://hub.docker.com/v2/repositories/" \
-          -H "Authorization: JWT $(curl -s -H "Content-Type: application/json" \
-          -X POST https://hub.docker.com/v2/users/login/ \
-          -d '{"username":"${{ secrets.DOCKER_USERNAME }}","password":"${{ secrets.DOCKER_PASSWORD }}"}' | jq -r .token)" \
-          -H "Content-Type: application/json" \
-          -d "{\"namespace\":\"${{ secrets.DOCKER_USERNAME }}\",\"name\":\"${REPO_NAME#*/}\",\"is_private\":false}" || echo "Repository might already exist"
-    
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-    
+
     - name: Build and push Docker image
+      if: steps.version_step.outputs.NEW_VERSION != ''
       uses: docker/build-push-action@v5
       with:
         context: ./backend
         file: ./backend/Dockerfile
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        tags: |
+          luizrinaldiriato/cicd:latest
+          luizrinaldiriato/cicd:${{ github.ref_name }}
+          luizrinaldiriato/cicd:${{ steps.version_step.outputs.NEW_VERSION }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-  # Job de deploy no Render
-  deploy:
-    name: Deploy to Render
-    runs-on: ubuntu-latest
-    needs: [ci, version, build]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Get version
-      id: version
+    - name: Move cache
+      if: steps.version_step.outputs.NEW_VERSION != ''
       run: |
-        if [ -n "${{ github.event.inputs.version }}" ]; then
-          VERSION="${{ github.event.inputs.version }}"
-        else
-          VERSION="1.0.$(date +%s)"
-        fi
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-    
-    - name: Update Render environment variables
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+    - name: Deploy to Render
+      if: steps.version_step.outputs.NEW_VERSION != ''
       run: |
+        echo "Disparando novo deploy no Render para a versão: ${{ steps.version_step.outputs.NEW_VERSION }}"
+        
         # Atualizar variáveis de ambiente no Render
         curl -X PATCH "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}" \
           -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
@@ -229,18 +242,19 @@ jobs:
               }
             ]
           }'
-    
-    - name: Deploy to Render
-      run: |
-        # Fazer deploy no Render com a nova imagem
+        
+        # Fazer deploy no Render
         curl -X POST "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
           -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
           -H "Content-Type: application/json" \
           -d '{
-            "image": "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}"
+            "image": "luizrinaldiriato/cicd:${{ steps.version_step.outputs.NEW_VERSION }}"
           }'
-    
+        
+        echo "Comando de deploy para o Render enviado."
+
     - name: Wait for deployment
+      if: steps.version_step.outputs.NEW_VERSION != ''
       run: |
         echo "Waiting for deployment to complete..."
         sleep 60
@@ -250,7 +264,7 @@ jobs:
     name: Notify on Error
     runs-on: ubuntu-latest
     if: failure()
-    needs: [ci, version, build, deploy]
+    needs: [ci, build_and_deploy]
     
     steps:
     - name: Send email notification
