feat(yml): teste de tag e deploy

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -242,6 +242,10 @@ jobs:
                 "value": "production"
               },
               {
+                "key": "RENDER",
+                "value": "true"
+              },
+              {
                 "key": "DB_HOST",
                 "value": "${{ secrets.DB_HOST }}"
               },
