docs: atualização do README e env.example com configurações de produção

--- a/backend/env.example
+++ b/backend/env.example
@@ -2,21 +2,26 @@
 PORT=3000
 NODE_ENV=development
 
-# Configurações do Banco de Dados PostgreSQL
-DB_HOST=localhost
+# Configurações do Banco de Dados PostgreSQL (Render)
+DB_HOST=dpg-d1gsp1ngi27c73c345og-a.oregon-postgres.render.com
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=password
-DB_NAME=tarefas_db
-DB_SSL=false
+DB_USER=tarefas_db_6kjg_user
+DB_PASSWORD=vElqqRldCgAuj0ZbXP76I6mTZQ5uOpSo
+DB_NAME=tarefas_db_6kjg
+DB_SSL=true
 
 # Configurações do BetterStack
-BETTERSTACK_SOURCE_TOKEN=your_betterstack_source_token_here
+BETTERSTACK_SOURCE_TOKEN=WP1Eq5fRkv7m44iNWPMUngLJ
 
 # Configurações do Docker Hub
-DOCKER_USERNAME=your_docker_username
-DOCKER_PASSWORD=your_docker_password
+DOCKER_USERNAME=samuelpregnolatto
+DOCKER_PASSWORD=your_docker_password_here
 
 # Configurações do Render
-RENDER_API_KEY=your_render_api_key
-RENDER_SERVICE_ID=your_render_service_id 
+RENDER_API_KEY=rnd_2Pwn5UH810tiX15DHSeENxWRJsjf
+RENDER_SERVICE_ID=srv-d1gt2nnfte5s7392qhtg
+
+# Configurações de Email (para notificações)
+EMAIL_USERNAME=samuelpregnolatto@gmail.com
+EMAIL_PASSWORD=your_gmail_app_password_here
+NOTIFICATION_EMAIL=samuelpregnolatto@gmail.com 
